--- a/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
@@ -9,7 +9,6 @@
     <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#FF455865">
@@ -25,25 +24,62 @@
                 </StackPanel>
             </Button>
         </Grid>        
-        <Label Grid.Row="1" Content="Select a device from the list to resume playback:" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="6,8,4,8" />
-        <ListView x:Name="listView" Grid.Row="2">
-            <ListView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type models:CloudDeviceInfo}" ItemsSource="{Binding SubItems}">
-                    <StackPanel Orientation="Vertical" Margin="4">
-                        <TextBlock Text="{Binding DeviceName}" FontSize="13" FontWeight="Bold" FontFamily="/Resources/Fonts/#Junction" Foreground="Black" Margin="0" />
-                        <TextBlock Text="On-the-fly Playlist" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Foreground="#333333" Margin="0" />
-                        <StackPanel Orientation="Horizontal">
-                            <StackPanel Background="DarkSlateGray" Width="54" Height="54" Margin="0,4,8,4"></StackPanel>
-                            <StackPanel Orientation="Vertical" VerticalAlignment="Center">
-                                <TextBlock Text="{Binding ArtistName}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#333333" Margin="0" />
-                                <TextBlock Text="{Binding AlbumTitle}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#555555" Margin="0" />
-                                <TextBlock Text="{Binding SongTitle}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#777777" Margin="0" />
-                            </StackPanel>
-                        </StackPanel>
-                        <TextBlock Text="{Binding Timestamp}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#999999" Margin="0" />
+        <Grid x:Name="gridLoading" Grid.Row="1" Visibility="Visible">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" />
+            <StackPanel Grid.Row="1">
+                <Label Content="Loading..." Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" HorizontalContentAlignment="Center" />
+                <ProgressBar Height="20" IsIndeterminate="true" Background="#FF242F35" BorderBrush="#FF242F35" Foreground="#FFE74C3C" Margin="5,2,5,2" VerticalContentAlignment="Center" />
+            </StackPanel>
+            <StackPanel Grid.Row="2" />
+        </Grid>
+        <Grid x:Name="gridLogin" Grid.Row="1" Visibility="Hidden">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" />
+            <StackPanel Grid.Row="1">
+                <Label Content="This application is not linked with a Dropbox account." Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" HorizontalContentAlignment="Center" />
+                <Button Margin="0" HorizontalAlignment="Center" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Click="btnOpenPreferencesWindow_OnClick">
+                    <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
+                        <Image Source="/Resources/Images/Buttons/preferences.png" Stretch="None" />
+                        <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="6,0,0,0">Open Preferences Window</Label>
                     </StackPanel>
-                </HierarchicalDataTemplate>
-            </ListView.Resources>            
-        </ListView>
+                </Button>
+            </StackPanel>
+            <StackPanel Grid.Row="2" />
+        </Grid>
+        <Grid x:Name="gridResumePlayback" Grid.Row="1" Visibility="Hidden">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Content="Select a device from the list to resume playback:" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="6,8,4,8" />
+            <ListView Grid.Row="1"  x:Name="listView">
+                <ListView.Resources>
+                    <HierarchicalDataTemplate DataType="{x:Type models:CloudDeviceInfo}" ItemsSource="{Binding SubItems}">
+                        <StackPanel Orientation="Vertical" Margin="4">
+                            <TextBlock Text="{Binding DeviceName}" FontSize="13" FontWeight="Bold" FontFamily="/Resources/Fonts/#Junction" Foreground="Black" Margin="0" />
+                            <TextBlock Text="On-the-fly Playlist" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Foreground="#333333" Margin="0" />
+                            <StackPanel Orientation="Horizontal">
+                                <StackPanel Background="DarkSlateGray" Width="54" Height="54" Margin="0,4,8,4"></StackPanel>
+                                <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                                    <TextBlock Text="{Binding ArtistName}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#333333" Margin="0" />
+                                    <TextBlock Text="{Binding AlbumTitle}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#555555" Margin="0" />
+                                    <TextBlock Text="{Binding SongTitle}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#777777" Margin="0" />
+                                </StackPanel>
+                            </StackPanel>
+                            <TextBlock Text="{Binding Timestamp}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#999999" Margin="0" />
+                        </StackPanel>
+                    </HierarchicalDataTemplate>
+                </ListView.Resources>            
+            </ListView>
+        </Grid>
     </Grid>
 </base:BaseWindow>
