--- a/MPfm/MPfm.Android/Resources/Layout/StartResumePlayback.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/StartResumePlayback.axml
@@ -114,7 +114,7 @@
       android:drawableLeft="@drawable/actionbar_cancel"
       android:drawablePadding="2dp"
       android:background="@drawable/dialogbutton"
-      android:text="Cancel"
+      android:text="No, thanks"
       android:textColor="@color/dialogbutton_text"
       android:textSize="14dp"
       android:padding="6dp" />
