--- a/MPfm/MPfm.Android/Resources/Layout/StartResumePlayback.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/StartResumePlayback.axml
@@ -23,8 +23,8 @@
       android:gravity="center_vertical"
       android:paddingLeft="12dp"
       android:paddingRight="12dp"
-      android:paddingTop="8dp"
-      android:paddingBottom="2dp"
+      android:paddingTop="4dp"
+      android:paddingBottom="0dp"
       android:text="Yanick Castonguay's iPad Air"
       android:textColor="#FFFFFF"
       android:textSize="20dp" />
@@ -35,8 +35,8 @@
       android:gravity="center_vertical"
       android:paddingLeft="12dp"
       android:paddingRight="12dp"
-      android:paddingTop="2dp"
-      android:paddingBottom="4dp"
+      android:paddingTop="0dp"
+      android:paddingBottom="2dp"
       android:text="On-the-fly Playlist"
       android:textColor="#FFFFFF"
       android:textSize="18dp" />
@@ -65,7 +65,10 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_vertical"
-          android:padding="4dp"
+          android:paddingTop="1dp"
+          android:paddingBottom="1dp"
+          android:paddingLeft="4dp"
+          android:paddingRight="4dp"
           android:text="I Love You But I've Chosen Darkness"
           android:textColor="#FFFFFF"
           android:textSize="16dp" />
@@ -74,7 +77,10 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_vertical"
-          android:padding="4dp"
+          android:paddingTop="1dp"
+          android:paddingBottom="1dp"
+          android:paddingLeft="4dp"
+          android:paddingRight="4dp"
           android:text="I Love You But I've Chosen Darkness"
           android:textColor="#EEEEEE"
           android:textSize="14dp" />
@@ -83,7 +89,10 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_vertical"
-          android:padding="4dp"
+          android:paddingTop="1dp"
+          android:paddingBottom="1dp"
+          android:paddingLeft="4dp"
+          android:paddingRight="4dp"
           android:text="I Love You But I've Chosen Darkness"
           android:textColor="#DDDDDD"
           android:textSize="13dp" />
@@ -105,24 +114,12 @@
   <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <Button
-      android:id="@+id/startResumePlayback_btnCancel"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:drawableLeft="@drawable/actionbar_cancel"
-      android:drawablePadding="2dp"
-      android:background="@drawable/dialogbutton"
-      android:text="No, thanks"
-      android:textColor="@color/dialogbutton_text"
-      android:textSize="14dp"
-      android:padding="6dp" />
+    android:gravity="center"
+    android:orientation="vertical">
     <Button
       android:id="@+id/startResumePlayback_btnResume"
-      android:layout_width="0dp"
+      android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:layout_weight="1"
       android:drawableLeft="@drawable/selectimage"
       android:drawablePadding="2dp"
       android:background="@drawable/dialogbutton"
@@ -130,5 +127,16 @@
       android:textColor="@color/dialogbutton_text"
       android:textSize="14dp"
       android:padding="6dp" />
-    </LinearLayout>
+    <Button
+      android:id="@+id/startResumePlayback_btnCancel"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:drawableLeft="@drawable/actionbar_cancel"
+      android:drawablePadding="2dp"
+      android:background="@drawable/dialogbutton"
+      android:text="No, thanks"
+      android:textColor="@color/dialogbutton_text"
+      android:textSize="14dp"
+      android:padding="6dp" />
+  </LinearLayout>
   </LinearLayout>
