--- a/MPfm/MPfm.Android/Resources/Layout/CloudConnect.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/CloudConnect.axml
@@ -15,10 +15,10 @@
     android:id="@+id/cloudConnect_btnCancel"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:drawableLeft="@drawable/selectimage"
+    android:drawableLeft="@drawable/actionbar_cancel"
     android:drawablePadding="2dp"
     android:background="@drawable/dialogbutton"
-    android:text="Resume from this device"
+    android:text="Cancel"
     android:textColor="@color/dialogbutton_text"
     android:textSize="14dp"
     android:padding="6dp" />
