--- a/MPfm/MPfm.Android/Resources/Layout/CloudConnect.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/CloudConnect.axml
@@ -3,23 +3,53 @@
   android:layout_width="200dp"
   android:layout_height="56dp"
   android:orientation="vertical">
-  <TextView
+  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:padding="12dp"      
-    android:text="Connecting to Dropbox..."
-    android:textColor="#AAAAAA"
-    android:textSize="14dp" />
-  <Button
-    android:id="@+id/cloudConnect_btnCancel"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:drawableLeft="@drawable/actionbar_cancel"
-    android:drawablePadding="2dp"
-    android:background="@drawable/dialogbutton"
-    android:text="Cancel"
-    android:textColor="@color/dialogbutton_text"
-    android:textSize="14dp"
-    android:padding="6dp" />
+    android:gravity="center"
+    android:orientation="horizontal">
+    <ProgressBar
+      android:id="@+id/cloudConnect_progressBar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="4dp"
+      android:indeterminate="true" />
+    <TextView
+      android:id="@+id/cloudConnect_lblStatus"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center_vertical"
+      android:padding="12dp"
+      android:text="Connecting to Dropbox..."
+      android:textColor="#999999"
+      android:textSize="16dp" />
   </LinearLayout>
+  <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="horizontal">
+    <Button
+      android:id="@+id/cloudConnect_btnOK"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:drawableLeft="@drawable/selectimage"
+      android:drawablePadding="2dp"
+      android:background="@drawable/dialogbutton"
+      android:text="OK"
+      android:textColor="@color/dialogbutton_text"
+      android:textSize="14dp"
+      android:padding="6dp" />
+    <Button
+      android:id="@+id/cloudConnect_btnCancel"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:drawableLeft="@drawable/actionbar_cancel"
+      android:drawablePadding="2dp"
+      android:background="@drawable/dialogbutton"
+      android:text="Cancel"
+      android:textColor="@color/dialogbutton_text"
+      android:textSize="14dp"
+      android:padding="6dp" />
+  </LinearLayout>
+</LinearLayout>
