--- a/MPfm/MPfm.iOS/XIB/iPhone/StartResumePlaybackViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/StartResumePlaybackViewController_iPhone.xib
@@ -93,7 +93,7 @@
                             <rect key="frame" x="20" y="345" width="240" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
-                            <state key="normal" title="Cancel">
+                            <state key="normal" title="No, thanks">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
